fix nav on tablets

--- a/be/proj/static/css/base.scss
+++ b/be/proj/static/css/base.scss
@@ -135,14 +135,6 @@ p, .body-text {
   padding-top: 2em;
 }
 
-.nav {
-  float: inherit;
-  >li {
-    display: inline-block;
-    float: inherit;
-  }
-}
-
 .header-links {
   letter-spacing: 3px;
   font-size: 16px;
